add junits FLINK-28171