@@ -301,7 +301,7 @@ class InitTaskManagerDecoratorTest extends KubernetesTaskManagerTestBase {
                         .withContainerPort(RPC_PORT)
                         .build();
         rpcConatinerPort.setAdditionalProperty("appProtocol", "tcp");
-        podMainContainer.setPorts(List.of(rpcConatinerPort));
+        podMainContainer.setPorts(Arrays.asList(rpcConatinerPort));
         final FlinkPod baseFlinkPodWithPorts =
                 new FlinkPod.Builder().withMainContainer(podMainContainer).build();
 
